# ai-quiz-demo

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURE.md  PROMPTS.md  README.md  SPEC.md  pyproject.toml  requirements.txt
data/: questions_general.json  questions_science.json
engine/: question_bank.py  quiz_engine.py  scoring.py
game/: app.py  config.py  io_manager.py  leaderboard.py  models.py
tests/: __init__.py  test_engine.py  test_io.py  test_leaderboard.py
utils/: rng.py  text.py  timers.py
